tests/ui/liveness/liveness-dead.stderr
error: value assigned to `x` is never read
  --> $DIR/liveness-dead.rs:9:24
   |
LL |     let mut x: isize = 3;
   |                        ^ this value is reassigned later and never used
LL |     x = 4;
   |     ----- `x` is overwritten here before the previous value is read
   |
note: the lint level is defined here
  --> $DIR/liveness-dead.rs:2:9
   |
LL | #![deny(unused_assignments)]
   |         ^^^^^^^^^^^^^^^^^^

error: value assigned to `x` is never read
  --> $DIR/liveness-dead.rs:17:5
   |
LL |     x = 4;
   |     ^^^^^
   |
   = help: maybe it is overwritten before being read?

error: value passed to `x` is never read
  --> $DIR/liveness-dead.rs:20:7
   |
LL | fn f4(mut x: i32) {
   |       ^^^^^
   |
   = help: maybe it is overwritten before being read?

error: value assigned to `x` is never read
  --> $DIR/liveness-dead.rs:27:5
   |
LL |     x = 4;
   |     ^^^^^
   |
   = help: maybe it is overwritten before being read?

error: aborting due to 4 previous errors

